--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,2 @@
-sonar.exclusions=/entity/src/main/java/com/fiap/burger/entity/**
-sonar.test.exclusions=/entity/src/main/java/com/fiap/burger/entity/**
+sonar.exclusions=/**/entity/**/*
+sonar.test.exclusions=/**/entity/**/*
